--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -135,3 +135,7 @@ app.token.logging.enabled=false
 
 # display verbode LTI data in the logs?
 app.lti.data.verbose.logging.enabled=false
+
+# update Canvas API scope handling
+app.canvas.api.scope.update.enabled=false
+app.canvas.api.scope.update.batchsize=100
