TCOTA-767 external integrations feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -135,3 +135,7 @@ app.token.logging.enabled=false
 
 # display verbode LTI data in the logs?
 app.lti.data.verbose.logging.enabled=false
+
+# external integrations
+#token TTL (default 3600 seconds)
+app.integrations.token.ttl=3600
